--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=PersonalFinance;User Id=postgres;Password=Rest@p270620;"
+  },
   "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
