--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=PersonalFinance;User Id=postgres;Password=Rest@p270620;"
+    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=PersonalFinance;User Id=postgres;Password=password;"
   },
   "Logging": {
     "LogLevel": {
