--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -31,9 +31,8 @@
             "type": "process",
             "args": [
                 "watch",
-                "run",
                 "--project",
-                "${workspaceFolder}/PersonalFinance.sln"
+                "PersonalFinance.csproj"
             ],
             "problemMatcher": "$msCompile"
         }
