--- a/PersonalFinance.Infrastructure/PersonalFinance.Infrastructure.csproj
+++ b/PersonalFinance.Infrastructure/PersonalFinance.Infrastructure.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PersonalFinance.Domain\PersonalFinance.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
