--- a/PersonalFinance.Infrastructure/PersonalFinance.Infrastructure.csproj
+++ b/PersonalFinance.Infrastructure/PersonalFinance.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
   </ItemGroup>
 
   <ItemGroup>
